--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.0",
     "date-fns": "^2.22.1",
+    "flag-icon-css": "^3.5.0",
     "gh-pages": "^3.2.3",
+    "i18next": "^20.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
